; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-write.c_new_identity.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-write.c_new_identity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @new_identity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @new_identity(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca [32 x i8], align 16
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %9 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %10 = call i32 @nelem(i8* %9)
  %11 = call i32 @fz_memrnd(i32* %7, i8* %8, i32 %10)
  %12 = load i32*, i32** %3, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @pdf_trailer(i32* %13, i32* %14)
  %16 = load i32, i32* @ID, align 4
  %17 = call i32 @PDF_NAME(i32 %16)
  %18 = call i32* @pdf_dict_put_array(i32* %12, i32 %15, i32 %17, i32 2)
  store i32* %18, i32** %6, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %23 = getelementptr inbounds i8, i8* %22, i64 0
  %24 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %25 = call i32 @nelem(i8* %24)
  %26 = sdiv i32 %25, 2
  %27 = call i32 @pdf_new_string(i32* %21, i8* %23, i32 %26)
  %28 = call i32 @pdf_array_push_drop(i32* %19, i32* %20, i32 %27)
  %29 = load i32*, i32** %3, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = load i32*, i32** %3, align 8
  %32 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %33 = getelementptr inbounds i8, i8* %32, i64 16
  %34 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %35 = call i32 @nelem(i8* %34)
  %36 = sdiv i32 %35, 2
  %37 = call i32 @pdf_new_string(i32* %31, i8* %33, i32 %36)
  %38 = call i32 @pdf_array_push_drop(i32* %29, i32* %30, i32 %37)
  %39 = load i32*, i32** %6, align 8
  ret i32* %39
}

declare dso_local i32 @fz_memrnd(i32*, i8*, i32) #1

declare dso_local i32 @nelem(i8*) #1

declare dso_local i32* @pdf_dict_put_array(i32*, i32, i32, i32) #1

declare dso_local i32 @pdf_trailer(i32*, i32*) #1

declare dso_local i32 @PDF_NAME(i32) #1

declare dso_local i32 @pdf_array_push_drop(i32*, i32*, i32) #1

declare dso_local i32 @pdf_new_string(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
